Handoff Banner: Fix margin on small screens

--- a/assets/wizards/handoff-banner/style.scss
+++ b/assets/wizards/handoff-banner/style.scss
@@ -8,9 +8,13 @@
 #newspack-handoff-banner {
 	background: $primary-500;
 	display: block;
-	margin: 0 0 0 -20px;
+	margin: 0 0 0 -10px;
 	padding: 20px;
 	position: relative;
+
+	@media screen and ( min-width: 783px ) {
+		margin-left: -20px;
+	}
 
 	// Dismissed
 
